[package]
name = "ghfetch"
version = "0.1.0"
edition = "2021"
description = "A Neofetch-inspired CLI tool for GitHub profiles with Gruvbox theme"
license = "MIT"
repository = "https://github.com/hustavojhon/ghfetch"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
sysinfo = "0.32"
dirs = "5"
chrono = "0.4"
terminal_size = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
